[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Object/Movable_Box.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Objects/Box.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 23, 4.75 )

[node name="InteractableObject" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CrateSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -31 )

[node name="LeftInteraction" type="Area2D" parent="." groups=["Box", "Box:Climb", "Box:Left", "Interact"]]
collision_layer = 16384
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftInteraction"]
position = Vector2( -31, -5 )
shape = SubResource( 5 )

[node name="RightInteraction" type="Area2D" parent="." groups=["Box", "Box:Climb", "Box:Right", "Interact"]]
collision_layer = 16384
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightInteraction"]
position = Vector2( 31, -5 )
shape = SubResource( 5 )

[node name="LeftSidePlayerSnap" type="Position2D" parent="."]
position = Vector2( -42, 0 )

[node name="RightSidePlayerSnap" type="Position2D" parent="."]
position = Vector2( 42, 0 )

[node name="GroundShape" type="CollisionPolygon2D" parent="."]
position = Vector2( -31, -62 )
polygon = PoolVector2Array( 0, 62, 7, 55, 55, 55, 62, 62 )

[connection signal="area_entered" from="LeftInteraction" to="." method="_on_LeftInteraction_area_entered"]
[connection signal="area_exited" from="LeftInteraction" to="." method="_on_LeftInteraction_area_exited"]
[connection signal="area_entered" from="RightInteraction" to="." method="_on_RightInteraction_area_entered"]
[connection signal="area_exited" from="RightInteraction" to="." method="_on_RightInteraction_area_exited"]
